--- a/Style_Guide_Template/Template.html
+++ b/Style_Guide_Template/Template.html
@@ -4,7 +4,7 @@
   <head>
 
     <meta charset="utf-8">
-    <title>Style Guide Template</title>
+    <title>Style Guides Template</title>
 
     <link href="css/main.css" rel="stylesheet">
 
