Modified submit/reset button Modified nav bar

--- a/Style_Guide_Template/Template.html
+++ b/Style_Guide_Template/Template.html
@@ -47,7 +47,7 @@
         <code>&lt;a href="#" class="button-nav"&gt;Default Button&lt;/a&gt;</code>
 
         <h3>Rendered element:</h3>
-        <a class="button-nav" href="#">Default Button</a>
+        <a class="button" href="#">Default Button</a>
 
       </section>
 
@@ -80,21 +80,24 @@
 
       <section>
         <h2>Headings</h2>
-          <h1 class="header-one">Header 1</h1>
-            <h3>Sample code:</h3>
-              <code>
+        <h1 class="header-one">Header 1</h1>
+        <h3>Sample code:</h3>
+
+        <code>
 &lt;h1 class="header-one"&gt;Header 1&lt;/h1&gt;
-              </code>
-          <h1 class="header-two">Header 2</h1>
-            <h3>Sample code:</h3>
-              <code>
+        </code>
+
+        <h1 class="header-two">Header 2</h1>
+        <h3>Sample code:</h3>
+        <code>
 &lt;h1 class="header-two"&gt;Header 2&lt;/h1&gt;
-              </code>
-          <h1 class="header-three">Header 3</h1>
-            <h3>Sample code:</h3>
-              <code>
+        </code>
+
+        <h1 class="header-three">Header 3</h1>
+        <h3>Sample code:</h3>
+        <code>
 &lt;h1 class="header-three"&gt;Header 3&lt;/h1&gt;
-              </code>
+        </code>
       </section>
 
       <section>
@@ -155,6 +158,9 @@
 
       <section>
         <h2>Main Navigation</h2>
+        
+        <a class="button-nav" href="#">Menu Item 1</a><a class="button-nav" href="#">Menu Item 2</a><a class="button-nav" href="#">Menu Item 3</a><a class="button-nav" href="#">Menu Item 4</a><a class="button-nav" href="#">Menu Item 5</a>
+
       </section>
 
       <section>
