Cleaned up indents

--- a/Style_Guide_Template/Template.html
+++ b/Style_Guide_Template/Template.html
@@ -67,85 +67,86 @@
     <!-- // INTERACTIVE ELEMENTS SECTION -->
 
 
-
     <!-- TEXT ELEMENTS SECTION // -->
     <section id="text_elements">
-
       <section>
         <h2>Font</h2>
-          <h1 class="helvetica-bold">Helvetica</h1>
-          <h1 class="helvetica-bold-italic">Helvetica</h1>
-          <h1 class="helvetica-standard">Helvetica</h1>
-          <h1 class="helvetica-standard-italic">Helvetica</h1>
+        <h1 class="helvetica-bold">Helvetica</h1>
+        <h1 class="helvetica-bold-italic">Helvetica</h1>
+        <h1 class="helvetica-standard">Helvetica</h1>
+        <h1 class="helvetica-standard-italic">Helvetica</h1>
 
       <section>
         <h2>Headings</h2>
         <h1 class="header-one">Header 1</h1>
         <h3>Sample code:</h3>
+      </section>
 
-        <code>
+      <code>
 &lt;h1 class="header-one"&gt;Header 1&lt;/h1&gt;
-        </code>
+      </code>
 
-        <h1 class="header-two">Header 2</h1>
-        <h3>Sample code:</h3>
-        <code>
+      <h1 class="header-two">Header 2</h1>
+      <h3>Sample code:</h3>
+      <code>
 &lt;h1 class="header-two"&gt;Header 2&lt;/h1&gt;
-        </code>
+      </code>
 
-        <h1 class="header-three">Header 3</h1>
-        <h3>Sample code:</h3>
+      <h1 class="header-three">Header 3</h1>
+      <h3>Sample code:</h3>
         <code>
 &lt;h1 class="header-three"&gt;Header 3&lt;/h1&gt;
-        </code>
+      </code>
       </section>
 
       <section>
         <h2>Paragraphs</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sapien urna, blandit eget gravida quis, cursus sit amet massa. Mauris scelerisque nulla sed odio imperdiet, in feugiat ipsum vestibulum. Nunc gravida placerat dolor, a accumsan augue. Nullam bibendum libero at nisl interdum, a molestie velit efficitur.</p>
-          <h3>Sample code:</h3>
-              <code>
+
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut sapien urna, blandit eget gravida quis, cursus sit amet massa. Mauris scelerisque nulla sed odio imperdiet, in feugiat ipsum vestibulum. Nunc gravida placerat dolor, a accumsan augue. Nullam bibendum libero at nisl interdum, a molestie velit efficitur.</p>
+
+        <h3>Sample code:</h3>
+              
+        <code>
 &lt;p&gt;Lorem ipsum dolor sit amet...&lt;/p&gt;
-              </code>
+        </code>
       </section>
 
       <section>
         <h2>Bulleted Lists</h2>
-          <ul>
-            <li>Suspendisse potenti. Nullam at eros nec dolor lobortis facilisis.</li>
-            <li>Vestibulum vel pulvinar felis, vitae lobortis enim.</li>
-            <li>Aenean eget turpis sed enim dictum euismod a ac magna.</li>
-            <li>Vestibulum vehicula velit sed dolor hendrerit, sed eleifend dolor.</li>
-          </ul>
-            <h3>Sample code:</h3>
-              <code>
+        <ul>
+          <li>Suspendisse potenti. Nullam at eros nec dolor lobortis facilisis.</li>
+          <li>Vestibulum vel pulvinar felis, vitae lobortis enim.</li>
+          <li>Aenean eget turpis sed enim dictum euismod a ac magna.</li>
+          <li>Vestibulum vehicula velit sed dolor hendrerit, sed eleifend dolor.</li>
+        </ul>
+        <h3>Sample code:</h3>
+        <code>
 &lt;ul&gt;
   &lt;li&gt;Suspendisse potenti...&lt;/li&gt;
   &lt;li&gt;Vestibulum vel...&lt;/li&gt;
   &lt;li&gt;Aenean eget turpis...&lt;/li&gt;
   &lt;li&gt;Vestibulum vehicula...&lt;/li&gt;
 &lt;/ul&gt;
-              </code>
+        </code>
       </section>
 
       <section>
         <h2>Numbered Lists</h2>
-          <ol>
-            <li>Suspendisse potenti. Nullam at eros nec dolor lobortis facilisis.</li>
-            <li>Vestibulum vel pulvinar felis, vitae lobortis enim.</li>
-            <li>Aenean eget turpis sed enim dictum euismod a ac magna.</li>
-            <li>Vestibulum vehicula velit sed dolor hendrerit, sed eleifend dolor.</li>
-          </ol>
-            <h3>Sample code:</h3>
-              <code>
+        <ol>
+          <li>Suspendisse potenti. Nullam at eros nec dolor lobortis facilisis.</li>
+          <li>Vestibulum vel pulvinar felis, vitae lobortis enim.</li>
+          <li>Aenean eget turpis sed enim dictum euismod a ac magna.</li>
+          <li>Vestibulum vehicula velit sed dolor hendrerit, sed eleifend dolor.</li>
+        </ol>
+        <h3>Sample code:</h3>
+        <code>
 &lt;ol&gt;
   &lt;li&gt;Suspendisse potenti...&lt;/li&gt;
   &lt;li&gt;Vestibulum vel...&lt;/li&gt;
   &lt;li&gt;Aenean eget turpis...&lt;/li&gt;
   &lt;li&gt;Vestibulum vehicula...&lt;/li&gt;
 &lt;/ol&gt;
-              </code>
-
+        </code>
       </section>
 
     </section>
@@ -160,7 +161,6 @@
         <h2>Main Navigation</h2>
         
         <a class="button-nav" href="#">Menu Item 1</a><a class="button-nav" href="#">Menu Item 2</a><a class="button-nav" href="#">Menu Item 3</a><a class="button-nav" href="#">Menu Item 4</a><a class="button-nav" href="#">Menu Item 5</a>
-
       </section>
 
       <section>
