Added in basic info for in-text links and submit buttons

--- a/Style_Guide_Template/Template.html
+++ b/Style_Guide_Template/Template.html
@@ -44,19 +44,39 @@
         <p>.button-nav</p>
 
         <h3>Sample code:</h3>
-        <code>&lt;a href="#" class="button-nav"&gt;Default Button&lt;/a&gt;</code>
+        <code>&lt;a href="#" class="button-nav"&gt;Navigation Button&lt;/a&gt;</code>
 
         <h3>Rendered element:</h3>
-        <a class="button" href="#">Default Button</a>
+        <a class="button-nav" href="#">Navigation Button</a>
 
       </section>
 
       <section>
         <h2>In-text link</h2>
+
+        <h3>CSS selector:</h3>
+        <p>p</p>
+
+        <h3>Sample code:</h3>
+        <code>&lt;a href="#"&gt;This is a link.&lt;/a&gt;</code>
+
+        <h3>Rendered element:</h3>
+        <p>
+          <a href="#">This is a link.</a>
+        </p>
       </section>
 
       <section>
         <h2>Submit/Reset Buttons</h2>
+
+        <h3>CSS selector:</h3>
+        <p>.button-submit</p>
+
+        <h3>Sample code:</h3>
+        <code>&lt;a href="#" class="button-submit"&gt;Submit Button&lt;/a&gt;</code>
+
+        <h3>Rendered element:</h3>
+        <a class="button-submit" href="#">Submit Button</a>
       </section>
 
       <section>
