--- a/week5/index.html
+++ b/week5/index.html
@@ -15,6 +15,8 @@
 	<div id="nav-bar">
 		<a class="button-nav" href="#">Careers</a><a class="button-nav" href="#">Services</a><a class="button-nav" href="#">Locations</a><a class="button-nav" href="#">Contact</a>
 	</div>
+
+	<img src="img/Security/Security2.jpg" alt="Security_Guards"> 
 	
 </body>
 
