Added first security guard image + h2 + paragraph.

--- a/week5/index.html
+++ b/week5/index.html
@@ -18,6 +18,8 @@
 
 	<img src="img/Security/Security2.jpg" alt="Security_Guards"> 
 	
+	<h2>Lorem Ipsum</h2>
+	<p>Sed vitae sapien pharetra, semper magna vitae, tincidunt urna. Vestibulum in vulputate nunc. Ut at ex molestie, porta ante venenatis, luctus tellus. Quisque sodales metus vel nisi elementum mollis. Sed sapien est, blandit vitae gravida nec, maximus sit amet purus.</p>
 </body>
 
 
