Worked on first section of homepage

--- a/week5/index.html
+++ b/week5/index.html
@@ -9,13 +9,21 @@
 </head>
 
 <body>
-	<h1 class="header">Security+</h1>
 
 	<div id="nav-bar">
-			<a class="button-nav" href="#">Careers</a><a class="button-nav" href="#">Services</a><a class="button-nav" href="#">Locations</a><a class="button-nav" href="#">Contact</a>
-		</div>
+		<a class="button-nav" href="#">Careers</a><a class="button-nav" href="#">Services</a><a class="button-nav" href="#">Locations</a><a class="button-nav" href="#">Contact</a>
+	</div>
 
-	<div class="section1">
+		
+		<img class="fullscreen-img" src="img/Security/Security2.jpg" alt="Security_Guards">
+	<div class="section">
+		<h2 class="section-header">Lorem Ipsum</h2>
+		<p class="section-text">Sed vitae sapien pharetra, semper magna vitae, tincidunt urna. Vestibulum in vulputate nunc. Ut at ex molestie, porta ante venenatis, luctus tellus. Quisque sodales metus vel nisi elementum mollis. Sed sapien est, blandit vitae gravida nec, maximus sit amet purus.</p>
+
+	</div>	
+
+
+	<div class="section">
 		
 		<img class="fullscreen-img" src="img/Security/Security2.jpg" alt="Security_Guards"> 
 		
@@ -37,24 +45,8 @@
 		<h2>Available. At A Moment's Notice.</h2>
 		<p>Sed a risus quis risus porta vulputate eu vel elit. Nunc et velit vel leo sollicitudin facilisis sit amet sit amet sapien. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vestibulum nisi nisi, cursus sed nulla at, placerat faucibus urna.</p>
 	</div>
+
+
 </body>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 </html>
