--- a/week5/index.html
+++ b/week5/index.html
@@ -15,10 +15,11 @@
 	</div>
 
 	<div class="section1">
-		<img class="fullscreen-img" src="img/Security/Security2.jpg" alt="Security_Guards">
-		<h2 class="section-header1">We've Got It Covered.</h2>
+		<img class="fullscreen-img" src="img/Security/Security2-edit.jpg" alt="Security_Guards">
+		<h2 class="section-header1">WE'VE GOT IT COVERED.</h2>
 		<p class="section-text1">Sed vitae sapien pharetra, semper magna vitae, tincidunt urna. Vestibulum in vulputate nunc. Ut at ex molestie, porta ante venenatis, luctus tellus. Quisque sodales metus vel nisi elementum mollis. Sed sapien est, blandit vitae gravida nec, maximus sit amet purus.</p>
-	</div>	
+	</div>
+
 
 	
 	<div class="section2">
