changed positioning to absolute

--- a/week5/index.html
+++ b/week5/index.html
@@ -17,11 +17,8 @@
 
 	<div class="section1">
 
-		<img class="fullscreen-img" src="img/Security/Security2-edit.jpg" alt="Security_Guards">
+		<img class="fullscreen-img" src="img/Security/Security2-edit.jpg" alt="Security_Guards" width="1920">
 		<h2 class="section-header1">WE'VE GOT IT COVERED.</h2>
-
-		<!-- <img class="fullscreen-img" src="img/Security/Security2.jpg" alt="Security_Guards">
-		<h2 class="section-header1">We'll handle it.</h2> -->
 
 		<p class="section-text1">Sed vitae sapien pharetra, semper magna vitae, tincidunt urna. Vestibulum in vulputate nunc. Ut at ex molestie, porta ante venenatis, luctus tellus. Quisque sodales metus vel nisi elementum mollis. Sed sapien est, blandit vitae gravida nec, maximus sit amet purus.</p>
 	</div>
@@ -29,13 +26,13 @@
 
 	
 	<div class="section2">
-		<img class="fullscreen-img" src="img/general-security/372171576_99f0d8fb6d_o.jpg" alt="Security_Guards">
+		<img class="fullscreen-img" src="img/general-security/372171576_99f0d8fb6d_o.jpg" alt="Security_Guards" width="1920">
 		<h2 class="section-header2">Total Security Solutions. Anytime. Anywhere.</h2>
 		<p class="section-text2">Praesent mollis tincidunt odio, eget maximus velit dapibus vel. Suspendisse eleifend lorem nisi, vel ultricies ipsum feugiat vel. Mauris a gravida dui. Proin eu congue diam. Ut dui erat, tempor iaculis pharetra at, mollis vitae elit. Sed laoreet consectetur vulputate.</p>
 	</div>
 
 	<div class="section3">
-		<img class="fullscreen-img" src="img/Security/police2.png" alt="Security_Guards">
+		<img class="fullscreen-img" src="img/Security/police2.png" alt="Security_Guards" width="1920">
 		<h2 class="section-header3">Available At A Moment's Notice.</h2>
 		<p class="section-text3">Sed a risus quis risus porta vulputate eu vel elit. Nunc et velit vel leo sollicitudin facilisis sit amet sit amet sapien. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vestibulum nisi nisi, cursus sed nulla at, placerat faucibus urna.</p>
 	</div>
