--- a/week5/index.html
+++ b/week5/index.html
@@ -23,6 +23,11 @@
 		<p class="section-text1">Sed vitae sapien pharetra, semper magna vitae, tincidunt urna. Vestibulum in vulputate nunc. Ut at ex molestie, porta ante venenatis, luctus tellus. Quisque sodales metus vel nisi elementum mollis. Sed sapien est, blandit vitae gravida nec, maximus sit amet purus.</p>
 	</div>
 
+	<div class="section1.5">
+		<h2 class="section-header2">BLANDIT GRAVIDA NEC TINCIDUNT.</h2>
+		<p class="section-text2">Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer pulvinar fermentum lectus eget rhoncus. Morbi magna tellus, fringilla at odio non, tempor bibendum velit. Proin ullamcorper lacus sed turpis tempus, quis euismod metus congue. Donec fermentum lobortis bibendum. Morbi sagittis eros pulvinar mauris placerat vulputate. Ut at ex et metus sollicitudin mollis luctus eget urna. Sed diam velit, egestas sit amet placerat maximus, sollicitudin quis orci. Morbi sagittis dolor vel tellus sagittis feugiat. Aliquam erat volutpat. Phasellus imperdiet et quam vel pharetra. Praesent tempus porttitor purus vel mollis. Cras ac blandit tellus, vitae mollis dolor. Quisque ultricies velit porta, aliquam metus id, feugiat nulla. Vestibulum aliquam non enim ornare interdum. Proin egestas malesuada ullamcorper.</p>
+	</div>
+
 
 	
 	<div class="section2">
