--- a/week5/index.html
+++ b/week5/index.html
@@ -12,7 +12,10 @@
 <body>
 
 	<div id="nav-bar">
-		<a class="button-nav" href="#">Careers</a><a class="button-nav" href="#">Services</a><a class="button-nav" href="#">Locations</a><a class="button-nav" href="#">Contact</a>
+		<img id="logo" src="img/temp-logo.png"><p id="logo-text">Security+</p>
+		<div id="nav-right">
+			<a class="button-nav button-nav-right" href="#">Careers</a><a class="button-nav button-nav-right" href="#">Services</a><a class="button-nav button-nav-right" href="#">Locations</a><a class="button-nav button-nav-right" href="#">Contact</a>
+		</div>
 	</div>
 
 	<div class="section1">
