--- a/week5/index.html
+++ b/week5/index.html
@@ -12,10 +12,12 @@
 <body>
 
 	<div id="nav-bar">
-		<img id="logo" src="img/temp-logo.png"><p id="logo-text">Security+</p>
-		<div id="nav-right">
-			<a class="button-nav button-nav-right" href="#">Careers</a><a class="button-nav button-nav-right" href="#">Services</a><a class="button-nav button-nav-right" href="#">Locations</a><a class="button-nav button-nav-right" href="#">Contact</a>
-		</div>
+		<a href="#">
+			<img id="logo" src="img/temp-logo.png"><p id="logo-text">Security+</p>
+			<div id="nav-right">
+				<a class="button-nav button-nav-right" href="#">Careers</a><a class="button-nav button-nav-right" href="#">Services</a><a class="button-nav button-nav-right" href="#">Locations</a><a class="button-nav button-nav-right" href="#">Contact</a>
+			</div>
+		</a>
 	</div>
 
 	<div class="section1">
@@ -31,8 +33,6 @@
 		<p class="section-text2">Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer pulvinar fermentum lectus eget rhoncus. Morbi magna tellus, fringilla at odio non, tempor bibendum velit. Proin ullamcorper lacus sed turpis tempus, quis euismod metus congue. Donec fermentum lobortis bibendum. Morbi sagittis eros pulvinar mauris placerat vulputate. Ut at ex et metus sollicitudin mollis luctus eget urna. Sed diam velit, egestas sit amet placerat maximus, sollicitudin quis orci. Morbi sagittis dolor vel tellus sagittis feugiat. Aliquam erat volutpat. Phasellus imperdiet et quam vel pharetra. Praesent tempus porttitor purus vel mollis. Cras ac blandit tellus, vitae mollis dolor. Quisque ultricies velit porta, aliquam metus id, feugiat nulla. Vestibulum aliquam non enim ornare interdum. Proin egestas malesuada ullamcorper.</p>
 	</div>
 
-
-	
 	<div class="section3">
 		<img class="fullscreen-img" src="img/general-security/372171576_99f0d8fb6d_o.jpg" alt="Security_Guards" width="1920">
 		<h2 class="section-header3">Total Security Solutions. Anytime. Anywhere.</h2>
@@ -43,6 +43,10 @@
 		<img class="fullscreen-img" src="img/Security/police2.png" alt="Security_Guards" width="1920">
 		<h2 class="section-header5">Available At A Moment's Notice.</h2>
 		<p class="section-text5">Sed a risus quis risus porta vulputate eu vel elit. Nunc et velit vel leo sollicitudin facilisis sit amet sit amet sapien. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vestibulum nisi nisi, cursus sed nulla at, placerat faucibus urna.</p>
+	</div>
+
+	<div id="footer">
+
 	</div>
 
 
