--- a/week5/index.html
+++ b/week5/index.html
@@ -25,15 +25,16 @@
 		<img class="fullscreen-img" src="img/Security/Security2-edit.jpg" alt="Security_Guards" width="1920">
 		<h2 class="section-header1">WE'VE GOT IT COVERED.</h2>
 
-		<p class="section-text1">Sed vitae sapien pharetra, semper magna vitae, tincidunt urna.</p>
+		<p class="section-text1">Sed vitae sapien pharetra, semper magna vitae, tincidunt urna. Vestibulum in vulputate nunc. Ut at ex molestie, porta ante venenatis, luctus tellus. Quisque sodales metus vel nisi elementum mollis. Sed sapien est, blandit vitae gravida nec, maximus sit amet purus.</p>
 	</div>
 
 	<div class="section2">
-		<img class ="world-map" src="img/Icons/world-map.png" alt="World_Map">
 		<h2 class="section-header2">BLANDIT GRAVIDA NEC TINCIDUNT.</h2>
-		<p class="section-text2">Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer pulvinar fermentum lectus eget rhoncus. Morbi magna tellus, fringilla at odio non, tempor bibendum velit. Proin ullamcorper lacus sed turpis tempus, quis euismod metus congue.</p>
+		<p class="section-text2">Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer pulvinar fermentum lectus eget rhoncus. Morbi magna tellus, fringilla at odio non, tempor bibendum velit. Proin ullamcorper lacus sed turpis tempus, quis euismod metus congue. Donec fermentum lobortis bibendum. Morbi sagittis eros pulvinar mauris placerat vulputate. Ut at ex et metus sollicitudin mollis luctus eget urna. Sed diam velit, egestas sit amet placerat maximus, sollicitudin quis orci. Morbi sagittis dolor vel tellus sagittis feugiat. Aliquam erat volutpat. Phasellus imperdiet et quam vel pharetra. Praesent tempus porttitor purus vel mollis. Cras ac blandit tellus, vitae mollis dolor. Quisque ultricies velit porta, aliquam metus id, feugiat nulla. Vestibulum aliquam non enim ornare interdum. Proin egestas malesuada ullamcorper.</p>
 	</div>
 
+
+	
 	<div class="section3">
 		<img class="fullscreen-img" src="img/general-security/372171576_99f0d8fb6d_o.jpg" alt="Security_Guards" width="1920">
 		<h2 class="section-header3">Total Security Solutions. Anytime. Anywhere.</h2>
@@ -46,8 +47,18 @@
 		<p class="section-text5">Sed a risus quis risus porta vulputate eu vel elit. Nunc et velit vel leo sollicitudin facilisis sit amet sit amet sapien. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vestibulum nisi nisi, cursus sed nulla at, placerat faucibus urna.</p>
 	</div>
 
-	<div id="footer">
-
+	<div id="footer" class="grid">
+		<div class="col-33of10">
+			<form method="post" action="#">
+	        <label for="form-name">Contact Us</label>
+	        <input type="text" id="form-name" placeholder="Name">
+	        <label for="form-subject"></label>
+	        <input type="text" id="form-subject" placeholder="Subject">	        
+	        <label for="form-comment"></label>	        
+	        <textarea id="form-comment" placeholder="Please place comment here"></textarea>
+	        <input type="submit" value="Submit your comment" class="button-submit">
+	        </form>
+    	</div>
 	</div>
 
 
