up to date files

--- a/week5/locations.html
+++ b/week5/locations.html
@@ -21,28 +21,19 @@
 		</a>
 	</div>
 
-	<div class="services-section4">
-		<div class="services-section4-content">
+	<div class="locations-section2">
+		<div class="section2-content">
 			<div class="grid">
+				
+				<img class ="locations-world-map" src="img/Icons/world-map.png" alt="World_Map">
+
 				<div class="col-2of10">&nbsp</div>
 				<div class="col-6of10">
-					<h2 class="section-header4">SUSPENDISSE EU SODALES ELIT.</h2>
-					<p class="section-text4"> Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer pulvinar fermentum lectus eget rhoncus. Morbi magna tellus, fringilla at odio non, tempor bibendum velit.</p>
+					<h2 class="section-header2">BLANDIT GRAVIDA NEC TINCIDUNT.</h2>
+					<p class="section-text2">Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Integer pulvinar fermentum lectus eget rhoncus. Morbi magna tellus, fringilla at odio non, tempor bibendum velit. Proin ullamcorper lacus sed turpis tempus, quis euismod metus congue.</p>
 				</div>
 				<div class="col-2of10">&nbsp</div>
 			</div> <!-- End of grid -->
-
-			<div class="grid">
-				<div class="col-3of10">&nbsp</div>
-				<div class="section4-icons">
-					<a href="security-guard-service.html"><img class="services-section4-icon col-1of10" src="img/Icons/shield.svg" alt="Security_Guards"></a>
-					<a href="armored-truck-service.html"><img class="services-section4-icon col-1of10" src="img/Icons/truck.svg" alt="Armoured-truck"></a>
-					<a href="parking-service.html"><img class="services-section4-icon col-1of10" src="img/Icons/cctv.svg" alt="cctv"></a>
-					<a href="vip-service.html"><img class="services-section4-icon col-1of10" src="img/Icons/sunglasses.svg" alt="protective-services"></a>
-				</div>
-				<div class="col-3of10">&nbsp</div>
-			</div> <!-- End of grid -->
-
 		</div>
 	</div>
 	
